--- a/cart/cart.html
+++ b/cart/cart.html
@@ -15,7 +15,7 @@
         <div class="header-content">
             <div class="logo">
                 <i class="fas fa-gem"></i>
-                <a id= "amazing-product-cart-logo" href="index.html">Amazing Product</a>
+                <a id= "amazing-product-cart-logo" href="../index.html">Amazing Product</a>
             </div>
             <button class="mobile-menu-btn" onclick="toggleMenu()">
                 <i class="fas fa-bars"></i>
