make it easier to change product details

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <main class="main-content">
         <div class="product-gallery">
             <div class="main-image-container">
-                <img src="./media/image1.jpeg" alt="Amazing Product" class="main-image" id="mainImage">
+                <img src="#" alt="Amazing Product" class="main-image" id="mainImage">
                 <div class="image-overlay">
                     <i class="fas fa-search-plus"></i>
                 </div>
             </div>
             <div class="thumbnail-container">
-                <img src="./media/images2.jpg" alt="Product Thumbnail 1" class="thumbnail active" onclick="changeImage(this, './media/images2.jpg')">
-                <img src="./media/images2.jpg" alt="Product Thumbnail 2" class="thumbnail" onclick="changeImage(this, './media/images2.jpg')">
-                <img src="/api/placeholder/80/80" alt="Product Thumbnail 3" class="thumbnail" onclick="changeImage(this, './media/image1.jpeg')">
-                <img src="/api/placeholder/80/80" alt="Product Thumbnail 4" class="thumbnail" onclick="changeImage(this, './media/images2.jpg')">
+                <img src="#" alt="Product Thumbnail 1" class="thumbnail active" id="thumbnail1">
+                <img src="#" alt="Product Thumbnail 2" class="thumbnail" id="thumbnail2">
+                <img src="#" alt="Product Thumbnail 3" class="thumbnail" id="thumbnail3">
+                <img src="#" alt="Product Thumbnail 4" class="thumbnail" id="thumbnail4">
             </div>
         </div>
         <div class="product-details">
@@ -129,7 +129,7 @@
             <p>&copy; 2024 Amazing Product. All rights reserved.</p>
         </div>
     </footer>
-    <script src="scripts.js"></script>
-    <script src="cart.js"></script>
+    <script type="module" src="scripts.js"></script>
+    <script type="module" src="cart.js"></script>
 </body>
 </html>
