--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Amazing Product. All rights reserved.</p>
+            <p>&copy; 2024 Amazing Product. All rights reserved. ( Made By Atayi )</p>
         </div>
     </footer>
     <script type="module" src="scripts.js"></script>
