removed some unnecessary functions

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -21,7 +21,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <nav class="nav">
-                <a href="index.html"><i class="fas fa-home"></i> Home</a>
+                <a href="../index.html"><i class="fas fa-home"></i> Home</a>
                 <a href="#features"><i class="fas fa-star"></i> Features</a>
                 <a href="#about"><i class="fas fa-info-circle"></i> About</a>
                 <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
