--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -26,7 +26,7 @@
             </div>
             <nav class="nav">
                 <a href="../index.html"><i class="fas fa-home"></i> Home</a>
-                <a href="../cart.html"><i class="fas fa-shopping-cart"></i> Cart</a>
+                <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a>
             </nav>
         </div>
     </header>
